[metadata]
name = mwsgi
version = 0.0.1
description = Micro WSGI Server
long_description = file: README.md
author = Oshinko
author_email = osnk@renjaku.jp
license = Unlicense
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)
    Programming Language :: Python :: 3

[options]
python_requires = >= 3
py_modules = mwsgi
